[package]
name = "osmium-pwm"
version = "0.1.4"
authors = ["Matthias Debernardini <m.f.debern@protonmail.com>"]
description = "a password manager that uses BIP-85"
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/matthiasdebernardini/osmium"


[dependencies]
bitcoin = "0.28.1"
bip39 = { version = "1.0.1", optional = true}
chrono = "0.4.19"
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive", "cargo"] }
log = "0.4.0"
fern = "0.6.1"
config = { version = "0.13.1", features = ["toml"] }
bip85 = "0.1.1"
rand = "0.8.5"
rand_core = "0.6.3"

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3

