[package]
name = "osmium-pwm"
version = "0.1.5"
authors = ["Matthias Debernardini <m.f.debern@protonmail.com>"]
description = "a password manager that uses BIP-85"
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/matthiasdebernardini/osmium"


[dependencies]
bitcoin = "0.29.2"
bip39 = { version = "1.0.1", optional = true}
chrono = "0.4.19"
clap = { version = "4.0.32", features = ["derive", "cargo"] }
log = "0.4.0"
fern = "0.6.1"
config = { version = "0.13.1", features = ["toml"] }
bip85 = "0.1.1"
rand = "0.8.5"
rand_core = "0.6.3"
anyhow = "1.0.68"
thiserror = "1.0.38"
xdg = "2.4.1"

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3

